fixed front page button spacing

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -221,7 +221,7 @@
       padding-left: 5px;
     }
     @include size(mdu) {
-      margin-top: 26px;
+      margin-top: 8px;
       a {
         padding: 0px;
       }
